--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -45,11 +45,6 @@
   }
 }
 
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-}
 
 body {
   color: rgb(var(--foreground-rgb));
@@ -61,6 +56,12 @@ body {
 a {
   color: inherit;
   text-decoration: none;
+}
+
+.glass-light {
+  background: rgba(55, 65, 81, .5);
+  backdrop-filter: blur(3.5px);
+  -webkit-backdrop-filter: blur(7.8px);
 }
 
 .glass {
