--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -53,8 +53,17 @@ body {
 }
 
 a {
+  @apply text-2xl sm:text-lg md:text-base lg:text-sm;
   color: inherit;
   text-decoration: none;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  @apply text-2xl md:text-lg lg:text-base;
+}
+
+p {
+  @apply text-xl sm:text-lg md:text-base lg:text-sm;
 }
 
 .glass-light {
