--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -63,7 +63,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 p {
-  @apply text-xl sm:text-lg md:text-base lg:text-sm;
+  @apply text-xl sm:text-lg md:text-base;
 }
 
 .glass-light {
