--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -47,7 +47,8 @@
 body {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(to bottom, transparent, rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb));
-  @apply leading-normal tracking-normal text-indigo-400 bg-cover bg-fixed;
+  @apply leading-normal tracking-normal text-indigo-400 bg-cover bg-scroll;
+  /* TODO switch from bg-scroll to separate divs and make background actuall fixed 100vh 100vw*/
   background-image: url("../../public/background.webp");
 }
 
