add everything except contact page

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,11 @@
 ---
-import AboutSection from "../components/AboutSection";
-import Layout from "../layouts/Layout.astro";
+import { About, Services, Showcase, Contact } from '../components';
+import Layout from '../layouts/Layout.astro';
 ---
 
 <Layout>
-  <AboutSection />
-  <!-- <Services />
+  <About />
+  <Services />
   <Showcase />
-  <Contact /> -->
+  <Contact />
 </Layout>
