fix layout styles

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,13 +1,13 @@
-<footer class="dark grid grid-cols-8 gap-4 p-12 glass-frosted pt-[8rem]">
+<footer class="dark grid grid-cols-8 gap-4 p-12 glass-frosted pt-[8rem] h-[40vh]">
   {
     /* <div class="col-span-full">
         <Link href="/">GrumpyTofu</Link>
       </div> */
   }
   <div class="col-span-4 flex flex-col space-y-1 text-sm xl:col-span-3">
-    <a href="/about" class="pb-6 md:pb-3"> About</a>
+    <a href="/about" class="pb-6 md:pb-3">About</a>
     {/* <a href="/blog">Blog</a> */}
-    <a href="/contact" class="pb-6 md:pb-3"> Contact</a>
+    <a href="/contact" class="pb-6 md:pb-3">Contact</a>
   </div>
   {
     /* <div class="col-span-4 flex flex-col space-y-1 text-sm xl:col-span-3">
