--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -19,9 +19,7 @@
       </div> */
   }
   <div class="col-span-4 flex flex-col space-y-1 text-sm xl:col-span-3">
-    <div
-      class="text-secondary text-2xl sm:text-lg md:text-base lg:text-sm pb-6 md:pb-3"
-    >
+    <div class="text-secondary text-2xl sm:text-lg md:text-base lg:text-sm pb-6 md:pb-3">
       Open Source
     </div>
     {
