--- a/src/pages/services.astro
+++ b/src/pages/services.astro
@@ -9,11 +9,10 @@ import { Section, Typography, Contact, InfoSectionList } from '../components';
   <Section id="intro">
     <Typography variant="h2" class="mb-6">Development Services</Typography>
     <Typography class="mb-6">
-      I am a Software Engineer with experience architecting, developing, and
-      managing enterprise applications. I specialize in web application
-      development using Full-stack Javascript/Typescript (React & Node.js). I
-      also have experience working with other tech stacks including Python,
-      C#/.NET, and SQL. I am passionate about architecting and developing
+      I am a Software Engineer with experience architecting, developing, and managing enterprise
+      applications. I specialize in web application development using Full-stack
+      Javascript/Typescript (React & Node.js). I also have experience working with other tech stacks
+      including Python, C#/.NET, and SQL. I am passionate about architecting and developing
       user-friendly, scalable, and secure systems.
     </Typography>
   </Section>
