--- a/src/pages/showcase.astro
+++ b/src/pages/showcase.astro
@@ -141,15 +141,10 @@ import Layout from '../layouts/Layout.astro';
           ))}
         </div> */
     }
-    <Typography variant="h3" class="text-center mb-12">
-      Under construction...
-    </Typography>
+    <Typography variant="h3" class="text-center mb-12">Under construction...</Typography>
     <Typography class="text-center">
-      Sorry about that! Until construction is finished, please feel free to
-      check out my{' '}
-      <a href="https://github.com/grumpyTofu" class="underline">
-        github!
-      </a>
+      Sorry about that! Until construction is finished, please feel free to check out my{' '}
+      <a href="https://github.com/grumpyTofu" class="underline"> github!</a>
     </Typography>
   </Section>
   <Contact />
