--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -3,12 +3,8 @@ import Layout from '../layouts/Layout.astro';
 ---
 
 <Layout>
-  <div
-    class="h-[60vh] w-full flex justify-center items-center pb-[10rem] pt-48"
-  >
-    <div
-      class="rounded-xl py-8 sm:py-14 px-6 sm:px-12 lg:px-16 w-10/12 z-10"
-    >
+  <div class="h-[60vh] w-full flex justify-center items-center pb-[10rem] pt-48">
+    <div class="rounded-xl py-8 sm:py-14 px-6 sm:px-12 lg:px-16 w-10/12 z-10">
       <h1
         class="my-4 text-3xl md:text-5xl text-white opacity-75 font-bold leading-tight text-center"
       >
