--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -9,10 +9,10 @@ const grecaptchaKeyId = import.meta.env.PUBLIC_GRECAPTCHA_KEY_ID;
 <Layout>
   <Section id="contact" class="justify-center" wrapperClasses="mt-12">
     <Card class="!bg-slate-800 my-[5rem] mx-auto py-12 px-8 max-w-4xl">
-      <ContactForm client:only="solid-js" />
+      <ContactForm client:only />
     </Card>
   </Section>
-  <ToastContainer client:only="solid-js" />
+  <ToastContainer client:only />
 </Layout>
 
 <script is:inline src=`https://www.google.com/recaptcha/enterprise.js?render=${grecaptchaKeyId}`
