--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -2,7 +2,7 @@
 import { LoadingDisplay } from './LoadingDisplay';
 ---
 
-<nav class="fixed top-0 flex w-full p-6 glass-thick z-30">
+<nav class="fixed top-0 flex w-full p-6 glass-thick z-30 h-[5.4rem]">
   <div>
     <a href="/" class="text-2xl md:text-md">GrumpyTofu</a>
   </div>
