--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -19,6 +19,7 @@ import Footer from '../components/Footer.astro';
     <div class="background"></div>
     <Navbar />
     <main>
+      <div class="w-full h-[5.4rem] glass"></div>
       <slot />
     </main>
     <Footer />
