--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,5 +1,8 @@
 ---
-import { Section, Typography, Contact, Showcase } from '../components';
+import { Typography } from '../components';
+import Section from '../components/Section.astro';
+import Contact from '../components/home/Contact.astro';
+import Showcase from '../components/home/Showcase.astro';
 import Layout from '../layouts/Layout.astro';
 ---
 
