--- a/src/pages/services.astro
+++ b/src/pages/services.astro
@@ -1,6 +1,8 @@
 ---
 import Layout from '../layouts/Layout.astro';
-import { Section, Typography, Contact, InfoSectionList } from '../components';
+import { Typography, InfoSectionList } from '../components';
+import Section from '../components/Section.astro';
+import Contact from '../components/home/Contact.astro';
 
 // const services = ["Custom application development", "Architectural design and consultation", "and more..."];
 ---
