--- a/src/pages/showcase.astro
+++ b/src/pages/showcase.astro
@@ -1,5 +1,7 @@
 ---
-import { Section, Typography, Contact } from '../components';
+import { Typography } from '../components';
+import Section from '../components/Section.astro';
+import Contact from '../components/home/Contact.astro';
 import Layout from '../layouts/Layout.astro';
 
 // interface Project {
