--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,9 @@
 ---
-import { About, Services, Showcase, Contact } from '../components';
 import Layout from '../layouts/Layout.astro';
+import About from '../components/home/About.astro';
+import Contact from '../components/home/Contact.astro';
+import Services from '../components/home/Services.astro';
+import Showcase from '../components/home/Showcase.astro';
 ---
 
 <Layout>
