update footer and mobile issues

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,14 +3,10 @@ const year = new Date().getFullYear();
 ---
 
 <footer class="dark p-12 glass-frosted pt-[8rem] min-h-[30vh]">
-
   <div class="flex justify-between">
-    
     <hr class="my-6 border-gray-200 sm:mx-autolg:my-8" />
     <div class="sm:flex sm:items-center sm:justify-between">
-      <span class="text-sm text-indigo-300 sm:text-center"
-        >© {year}<a class="hover:underline text-center">GrumpyTofu</a> All Rights Reserved.
-      </span>
+      <span class="text-sm italic text-indigo-400">© {year} GrumpyTofu All Rights Reserved.</span>
     </div>
   </div>
 </footer>
