--- a/src/components/home/About.astro
+++ b/src/components/home/About.astro
@@ -4,7 +4,7 @@ import { Typography } from '../typography';
 ---
 
 <Section id="about">
-  <div class="max-w-screen-xl px-8 xl:px-16 mx-auto">
+  <div class="max-w-screen-xl px-8 xl:px-16 mx-auto pb-24">
     <div
       class="grid grid-flow-row sm:grid-flow-col grid-rows-2 md:grid-rows-1 sm:grid-cols-2 gap-8 py-6 sm:py-16"
     >
