--- a/src/components/home/Contact.astro
+++ b/src/components/home/Contact.astro
@@ -10,10 +10,10 @@ import Section from '../Section.astro';
   >
     <div class="flex flex-col text-left w-10/12 sm:w-7/12 lg:w-5/12 mb-6 sm:mb-0">
       <Typography variant="h3" class="!font-medium text-center sm:text-start">
-        Ready to dive in?
+        Want to know more?
       </Typography>
       <Typography class="hidden md:block md:mt-3">
-        Contact me to schedule a consultation.
+        Reach out to discuss your project, ask a question, or just say hi!
       </Typography>
     </div>
     <a href="/contact" class="text-2xl sm:text-xl lg:text-lg mt-6 sm:mt-3 md:mt-0 z-50"> Contact</a>
