--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,11 +4,13 @@ import About from '../components/home/About.astro';
 import Contact from '../components/home/Contact.astro';
 import Services from '../components/home/Services.astro';
 import Showcase from '../components/home/Showcase.astro';
+import Experience from '../components/home/Experience.astro';
 ---
 
 <Layout>
   <About />
   <Services />
-  <Showcase />
+  <Experience />
+  <!-- <Showcase /> -->
   <Contact />
 </Layout>
