update experience styles

--- a/src/components/Section.astro
+++ b/src/components/Section.astro
@@ -32,7 +32,7 @@ switch (variant) {
 
 if (classes) sectionClasses += ` ${classes}`;
 
-let wrapperClassName = 'block w-full px-12';
+let wrapperClassName = 'block w-full px-12 py-12';
 if (wrapperClasses) wrapperClassName += ` ${wrapperClasses}`;
 ---
 
