--- a/src/components/home/Experience.astro
+++ b/src/components/home/Experience.astro
@@ -1,4 +1,5 @@
 ---
+import { Typography } from '..';
 import Section from '../Section.astro';
 import Timeline from '../Timeline.astro';
 import TimelineItem from '../TimelineItem.astro';
@@ -52,7 +53,8 @@ const experience = [
 ];
 ---
 
-<Section id="experience" variant='thick'>
+<Section id="experience" variant="thick">
+  <Typography variant="h2" class="!font-medium leading-normal text-center">Work Experience</Typography>
   <div class="w-full pt-14 pb-[12rem]">
     <Timeline>
       {
