--- a/src/components/home/Experience.astro
+++ b/src/components/home/Experience.astro
@@ -53,9 +53,9 @@ const experience = [
 ];
 ---
 
-<Section id="experience" variant="thick">
+<Section id="experience" variant="frosted">
   <Typography variant="h2" class="!font-medium leading-normal text-center">Work Experience</Typography>
-  <div class="w-full pt-14 pb-[12rem]">
+  <div class="w-full pt-14 pb-[6rem]">
     <Timeline>
       {
         experience.map((item) => (
