--- a/src/components/Section.astro
+++ b/src/components/Section.astro
@@ -18,7 +18,7 @@ const {
   ...props
 } = Astro.props;
 
-let sectionClasses = 'min-h-[80vh] flex items-center relative';
+let sectionClasses = 'min-h-[80vh] flex relative';
 
 switch (variant) {
   case 'transparant':
