--- a/src/components/home/Contact.astro
+++ b/src/components/home/Contact.astro
@@ -4,9 +4,13 @@ import { Card } from '../card';
 import Section from '../Section.astro';
 ---
 
-<Section id="contact" variant="frosted" class="flex justify-center !min-h-0 !h-0 z-50 !-mb-[1rem] py-0">
+<Section
+  id="contact"
+  variant="frosted"
+  class="flex justify-center !min-h-0 !h-0 z-50 !-mb-[1rem] py-0"
+>
   <Card
-    class="!-mt-20 z-10 !w-full !bg-slate-800 rounded-xl py-8 sm:py-14 px-6 sm:px-12 lg:px-16 flex flex-col sm:flex-row justify-between items-center"
+    class="!-mt-[10rem] z-10 !w-full !bg-slate-800 rounded-xl py-8 sm:py-12 px-6 sm:px-12 lg:px-16 flex flex-col sm:flex-row justify-between items-center"
   >
     <div class="flex flex-col text-left w-10/12 sm:w-7/12 lg:w-5/12 mb-6 sm:mb-0">
       <Typography variant="h3" class="!font-medium text-center sm:text-start">
