--- a/src/components/home/Services.astro
+++ b/src/components/home/Services.astro
@@ -9,7 +9,7 @@ const services = [
 ];
 ---
 
-<Section id="services" variant="frosted">
+<Section id="services" variant="thin">
   <div class="max-w-screen-xl pt-8 pb-6 sm:pt-14 sm:pb-14 px-6 sm:px-8 lg:px-16 mx-auto">
     <div class="grid grid-flow-row sm:grid-flow-col grid-cols-1 sm:grid-cols-2 gap-8 py-8 my-12">
       <div class="h-full w-full p-4">
