--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,14 +3,15 @@ import Layout from '../layouts/Layout.astro';
 import About from '../components/home/About.astro';
 import Contact from '../components/home/Contact.astro';
 import Services from '../components/home/Services.astro';
-import Showcase from '../components/home/Showcase.astro';
+import Skills from '../components/home/Skills.astro';
 import Experience from '../components/home/Experience.astro';
 ---
 
 <Layout>
   <About />
-  <Services />
   <Experience />
+  <Skills />
+  <Services />
   <!-- <Showcase /> -->
   <Contact />
 </Layout>
