fix cross device spacing

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,7 +2,7 @@
 const year = new Date().getFullYear();
 ---
 
-<footer class="dark flex justify-end items-end p-12 glass-frosted pt-[8rem] min-h-[30vh]">
+<footer class="dark flex justify-end items-end p-12 glass-frosted pt-[8rem] min-h-[30vh] sm:min-h-[20vh]">
   <div class="flex justify-end sm:items-end">
     <hr class="my-6 border-gray-200 sm:mx-autolg:my-8" />
     <div class="sm:flex sm:items-center sm:justify-between">
