--- a/src/components/home/About.astro
+++ b/src/components/home/About.astro
@@ -3,7 +3,7 @@ import Section from '../Section.astro';
 import { Typography } from '../typography';
 ---
 
-<Section id="about">
+<Section id="about" class="flex justify-center items-center">
   <div
     class="flex items-center flex-col-reverse lg:flex-row max-w-screen-xl px-8 xl:px-16 mx-auto pb-24"
   >
