--- a/src/components/home/Contact.astro
+++ b/src/components/home/Contact.astro
@@ -10,7 +10,7 @@ import Section from '../Section.astro';
   class="flex justify-center !min-h-0 !h-0 z-50 !-mb-[1rem] py-0"
 >
   <Card
-    class="!-mt-[10rem] z-10 !w-full !bg-slate-800 rounded-xl py-8 sm:py-12 px-6 sm:px-12 lg:px-16 flex flex-col sm:flex-row justify-between items-center"
+    class="!-mt-[8rem] sm:!-mt-[10rem] z-10 !w-full !bg-slate-800 rounded-xl py-8 sm:py-12 px-6 sm:px-12 lg:px-16 flex flex-col sm:flex-row justify-between items-center"
   >
     <div class="flex flex-col text-left w-10/12 sm:w-7/12 lg:w-5/12 mb-6 sm:mb-0">
       <Typography variant="h3" class="!font-medium text-center sm:text-start">
