--- a/src/components/home/Experience.astro
+++ b/src/components/home/Experience.astro
@@ -53,7 +53,7 @@ const experience = [
 ];
 ---
 
-<Section id="experience" variant="frosted">
+<Section id="experience" variant="frosted" class="pt-14 px-6 md:px-12">
   <Typography variant="h2" class="!font-medium leading-normal text-center">Work Experience</Typography>
   <div class="w-full pt-14 pb-[6rem]">
     <Timeline>
