--- a/src/components/home/Skills.astro
+++ b/src/components/home/Skills.astro
@@ -25,9 +25,9 @@ import {
 import { Typography } from '../typography';
 ---
 
-<Section id="skills" variant='thick' class="py-12">
+<Section id="skills" variant='thick' class="py-14">
   <Typography variant="h2" class="!font-medium leading-normal text-center mb-6">Skills</Typography>
-  <div class="grid grid-cols-3 md:grid-cols-4 lg:grid-cols-5 gap-4 py-6">
+  <div class="flex justify-center flex-wrap py-6">
     <Icon label="React" icon={ReactIcon} />
     <Icon label="NextJS" icon={NextJSIcon} />
     <Icon label="Angular" icon={AngularIcon} />
